<resources>
    <string name="app_name">Praca_dyplomowa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_LogIn">Sign in</string>
    <!--   <string name="default_email">bartek123@bartek123.pl</string>
    <string name="default_password">bartek123</string> -->

    <string name="default_email">hubert@hubert.pl</string>
    <string name="default_password">hubert123</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_matches">Matches</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_scores">Scores</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_chat">Shoutbox</string>
    <string name="menu_bets">My bets</string>
</resources>