<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_matches">

    <fragment
        android:id="@+id/nav_matches"
        android:name="com.example.praca_dyplomowa.ui.matches.MatchesFragment"
        android:label="@string/menu_matches"
        tools:layout="@layout/fragment_matches" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.praca_dyplomowa.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.praca_dyplomowa.ui.notifications.NotificationsFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/nav_scores"
        android:name="com.example.praca_dyplomowa.ui.scores.ScoresFragment"
        android:label="@string/menu_scores"
        tools:layout="@layout/fragment_scores" />
    <fragment
        android:id="@+id/nav_leaderboard"
        android:name="com.example.praca_dyplomowa.ui.leaderboard.LeaderboardFragment"
        android:label="@string/menu_leaderboard"
        tools:layout="@layout/fragment_leaderboard" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.praca_dyplomowa.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.praca_dyplomowa.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />

</navigation>