<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

              <item
                  android:id="@+id/nav_profile"
                  android:icon="@drawable/ic_baseline_account_circle_24"
                  android:title="@string/menu_profile" />
              <item
                  android:id="@+id/nav_matches"
                  android:icon="@drawable/ic_baseline_sports_soccer_24"
                  android:title="@string/menu_matches" />
<!--              <item
                  android:id="@+id/nav_notifications"
                  android:icon="@drawable/ic_menu_slideshow"
                  android:title="@string/menu_notifications" />
-->
              <item
                  android:id="@+id/nav_scores"
                  android:icon="@drawable/ic_baseline_bar_chart_24"
                  android:title="@string/menu_scores" />
              <item
                  android:id="@+id/nav_bets"
                  android:icon="@drawable/ic_baseline_timeline_24"
                  android:title="@string/menu_bets" />
              <item
                  android:id="@+id/nav_leaderboard"
                  android:icon="@drawable/ic_baseline_leaderboard_24"
                  android:title="@string/menu_leaderboard" />
        <!--
               <item
                   android:id="@+id/nav_settings"
                   android:icon="@drawable/ic_menu_slideshow"
                   android:title="@string/menu_settings" />
         -->
              <item
                  android:id="@+id/nav_chat"
                  android:icon="@drawable/ic_baseline_chat_24"
                  android:title="@string/menu_chat" />

    </group>

</menu>